[package]
name = "utilities"
version = "0.1.0"
authors = ["Shannon Pace <futufeld@gmail.com>"]

[lib]
name = "utilities"
path = "lib.rs"

[features]
nightly = ["aster/nightly"]

[dependencies]
aster = { version = "0.9.2", default_features = false }
getopts = "0.2"
rand = "0.3"
serde = "0.6.6"
serde_json = "0.6.0"
serde_macros = "0.6.5"
time = "*"
