[package]
name = "utilities"
version = "1.0.0"
authors = ["Shannon Pace <futufeld@gmail.com>"]

[lib]
name = "utilities"
path = "lib.rs"

[features]
nightly = ["aster/nightly"]

[dependencies.linalg]
path = "../linalg"

[dependencies]
aster = "0.10"
getopts = "0.2"
quasi = "0.4.0"
rand = "0.3"
serde = "0.6.11"
serde_json = "0.6.0"
serde_macros = "0.6.11"
time = "*"
