[package]
name = "disc_avoidance"
version = "1.0.0"
authors = ["Shannon Pace <futufeld@gmail.com>"]

[[bin]]
name = "main"
path = "main.rs"
test = false
docs = false

[lib]
name = "disc_avoidance"
path = "lib.rs"

[dependencies.common]
path = "../common"

[dependencies.linalg]
path = "../../linalg"

[dependencies.utilities]
path = "../../utilities"

[dependencies]
time = "*"
