[package]
name = "vehicle_avoidance"
version = "0.1.0"
authors = ["Shannon Pace <futufeld@gmail.com>"]

[[bin]]
name = "main"
path = "main.rs"
test = false
docs = false

[lib]
name = "vehicle_avoidance"
path = "lib.rs"

[dependencies.common]
path = "../common"

[dependencies.linalg]
path = "../../linalg"

[dependencies.utilities]
path = "../../utilities"

[dependencies]
time = "*"
